--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "nbish11/meek-http",
     "description": "A simple framework for working with HTTP requests and responses in PHP.",
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "codeclimate/php-test-reporter": "^0.3.0"
     },
     "license": "MIT",
     "authors": [
