--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,9 @@ install:
 
 script: vendor/bin/phpunit
 
+after_script: ./codeclimate.sh
+
 matrix:
     allow_failures:
         - php: hhvm
     fast_finish: true
-
-addons:
-    code_climate:
-        repo_token: fd7a26b6b37408e6aec6f0a008f1a365dc388fcc9edc9ff3e2cae10a52341160
