--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 
-sudo: false
-
 php:
     - 5.5
     - 5.6
     - 7.0
     - hhvm
+
+sudo: false
 
 before_install:
     - composer self-update
@@ -14,11 +14,18 @@ before_install:
 install:
     - composer install --prefer-source --no-interaction --dev
 
-script: vendor/bin/phpunit
+script:
+  - vendor/bin/phpunit
+  - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
 
-after_script: ./codeclimate.sh
+after_script:
+  - vendor/bin/test-reporter
 
 matrix:
     allow_failures:
         - php: hhvm
     fast_finish: true
+
+addons:
+  code_climate:
+    repo_token: $CODE_CLIMATE_TOKEN
