--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ install:
 
 script:
   - vendor/bin/phpunit
-  - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
   - vendor/bin/test-reporter
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
 
 matrix:
     allow_failures:
