--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,18 +1,19 @@
 filter:
-    paths: [src/*]
-    excluded_paths: [example/*, vendor/*, tests/*]
-before_commands:
-    - 'composer install --dev --prefer-source'
+  paths: [src/*]
+  excluded_paths: [example/*, vendor/*, tests/*]
+
+build: false
+
 tools:
-    external_code_coverage: true
-    php_mess_detector: true
-    php_code_sniffer: true
-    sensiolabs_security_checker: true
-    php_code_coverage: true
-    php_pdepend: true
-    php_loc:
-        enabled: true
-        excluded_dirs: [example, vendor, tests]
-    php_cpd:
-        enabled: true
-        excluded_dirs: [example, vendor, tests]
+  external_code_coverage: true
+  php_mess_detector: true
+  php_code_sniffer: true
+  sensiolabs_security_checker: true
+  php_code_coverage: true
+  php_pdepend: true
+  php_loc:
+    enabled: true
+    excluded_dirs: [example, vendor, tests]
+  php_cpd:
+    enabled: true
+    excluded_dirs: [example, vendor, tests]
