--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,27 @@
 language: php
 
 php:
-    - 5.5
-    - 5.6
-    - 7.0
-    - hhvm
+  - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
 sudo: false
 
 before_install:
-    - composer self-update
+  - composer self-update
 
 install:
-    - composer install --prefer-source --no-interaction --dev
+  - composer install --no-interaction --prefer-source
 
 script:
-  - vendor/bin/phpunit --coverage-clover=coverage.clover
+  - vendor/bin/phpunit --colors --coverage-clover=coverage.clover
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - test "5.6" == "${TRAVIS_PHP_VERSION}" && wget https://scrutinizer-ci.com/ocular.phar
+  - test -f ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
 
 matrix:
-    allow_failures:
-        - php: hhvm
-    fast_finish: true
-
-addons:
-  code_climate:
-    repo_token: $CODE_CLIMATE_TOKEN
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
